# sandbox

./: .gitignore  database.db  db.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 13e1961b2e28_.py  20a442f17098_.py  5f4e36a3a8b5_.py  7f67f7deeea9_.py  a79bbe904031_.py
config/: config.py  dev.py
controllers/: auth.py
dependencies/: auth.py  inertia.py
models/: jwt_token.py  passkey.py  user.py
static/: jsconfig.json  package.json  vite.config.js
static/src/: main.js
static/src/Pages/: IndexPage.svelte
static/src/pages/: index.svelte
static/src/pages/auth/: otp.svelte  otp_setup.svelte  signup.svelte  signup_success.svelte  webauthn.svelte
static/tmp/cache/vite/: last-build-production.json
templates/: index.html
tests/: fixtures.py
tests/controllers/: test_auth.py
tests/models/: test_user.py
