[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Tipuch <fiorini751@proton.me>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
pydantic = "^2.7.4"
pydantic-settings = "^2.5.2"
alembic = "^1.13.1"
argon2-cffi = "^23.1"
pyotp = "^2.9.0"
fastapi-inertia = "^1.0"
arrow = "^1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
